--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,42 @@
 [package]
 name = "audio_processor"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 
 [dependencies]
-clap = { version = "4.3", features = ["derive"] }
-serde = { version = "1.0", features = ["derive"] }
+serde = "1.0"
 serde_json = "1.0"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+indexmap = "2.8.0"
+
+# 日志相关
+log = "0.4"
+fern = { version = "0.7.1", features = ["colored"] }
+chrono = "0.4"
+
+# 错误处理
+thiserror = "2.0.12"
 anyhow = "1.0"
-thiserror = "1.0"
-tokio = { version = "1.28", features = ["full"] }
-tracing = "0.1"
-tracing-subscriber = "0.3"
+
+# 命令行和进度显示
 indicatif = "0.17"
+clap = { version = "4.3", features = ["derive"] }
+
+# 异步运行时
+tokio = { version = "1.28", features = ["full"] }
+
+# 文件监控
+notify = "6.1"
+
+# HTTP请求
+reqwest = { version = "0.11", features = ["json", "blocking"] }
+
+# 文件和路径处理
+walkdir = "2.4"
+
+# 音频处理 (FFmpeg绑定)
+# 或者直接调用命令行: std::process
+
+# 其他工具
+once_cell = "1.18"
